--- a/youtube-search/index.html
+++ b/youtube-search/index.html
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <input type="text" name="keyword" id="keyword" class="form-control" required>
                         <br>
-                        <input type="submit" class="btn btn-primary form-control" value="Submit" onclick="Search()"/>
+                        <input type="submit" id="btnSearch" class="btn btn-primary form-control" value="Submit" onclick="Search(next='')"/>
                     </div>
                 </form>
             </div>
